# singer

./: .gitignore  README.md  TODO  meson.build  singer.c  singer.h
example/: README.md  main.c  meson.build
example/singer/: singer.h
